Button sizes + white-space overflow issue

--- a/components/_button.sass
+++ b/components/_button.sass
@@ -17,6 +17,10 @@
   &.small
     padding: 5px 20px
 
+  &.tiny
+    padding: 5px 10px
+    line-height: 20px
+
   &.outline-dark
     background: #fff
     +shadow(2)
